<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.awad.noor.noorawadcourses.AddCourseActivity">

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phone_of_the_course_owner"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/location_of_the_course"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subject_of_the_course"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/days_in_a_month"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price_you_have_to_pay_in_a_month"
        android:inputType="textPersonName" />



    <Button
        android:id="@+id/btnCourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Course to list" />
</LinearLayout>